--- a/index.html
+++ b/index.html
@@ -344,9 +344,6 @@
                   <a href="https://login-border-light.vercel.app/" target="_blank">
                     <i class="bx bx-link"></i>
                   </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
-                    <i class="bx bx-plus"></i>
-                  </a>
                 </div>
               </div>
             </div>
@@ -362,9 +359,6 @@
                   <a href="https://login-registro.vercel.app/index.html?#" target="_blank">
                     <i class="bx bx-link"></i>
                   </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
-                    <i class="bx bx-plus"></i>
-                  </a>
                 </div>
               </div>
             </div>
@@ -377,11 +371,8 @@
                 <h4>Tela de login #2</h4>
                 <p>Background cores alternativa</p>
                 <div class="portfolio-links">
-                  <a href="https://login-transicao-01.vercel.app/" target="_blank">
+                  <a href="https://login-border-light-q79a.vercel.app/" target="_blank">
                     <i class="bx bx-link"></i>
-                  </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
-                    <i class="bx bx-plus"></i>
                   </a>
                 </div>
               </div>
@@ -395,11 +386,8 @@
                 <h4>Tela de Login</h4>
                 <p>Transição para formulario de cadastro</p>
                 <div class="portfolio-links">
-                  <a href="https://login-border-light.vercel.app/" target="_blank">
+                  <a href="" target="_blank">
                     <i class="bx bx-link"></i>
-                  </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
-                    <i class="bx bx-plus"></i>
                   </a>
                 </div>
               </div>
@@ -410,14 +398,11 @@
             <div class="portfolio-wrap">
               <img src="./assets/img/portfolio/login/login_3.jpg"  class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Tela de Login#2</h4>
+                <h4>Tela de Login#4</h4>
                 <p>Transição para formulario de cadastro</p>
                 <div class="portfolio-links">
-                  <a href="https://login-border-light.vercel.app/" target="_blank">
+                  <a href="https://login-transicao-01.vercel.app/" target="_blank">
                     <i class="bx bx-link"></i>
-                  </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
-                    <i class="bx bx-plus"></i>
                   </a>
                 </div>
               </div>
@@ -434,8 +419,6 @@
                   <a href="https://cadast-user-js.vercel.app/" target="_blank">
                     <i class="bx bx-link"></i>
                   </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -451,8 +434,6 @@
                   <a href="https://cadast-user-js.vercel.app/" target="_blank">
                     <i class="bx bx-link"></i>
                   </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -468,8 +449,6 @@
                   <a href="https://modulo-22-projeto.vercel.app/" target="_blank">
                     <i class="bx bx-link"></i>
                   </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -485,8 +464,6 @@
                   <a href="https://exercicio-modulo5.vercel.app/" target="_blank">
                     <i class="bx bx-link"></i>
                   </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -502,8 +479,6 @@
                   <a href="https://projectvingadores.vercel.app/" target="_blank">
                     <i class="bx bx-link"></i>
                   </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -519,8 +494,6 @@
                   <a href="https://marcenaria-projeto-3.vercel.app/" target="_blank">
                     <i class="bx bx-link"></i>
                   </a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
