modified:   index.html

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/login/bgfixo-avatar.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Tela de login #3</h4>
+                <h4>Tela de login - Avatar</h4>
                 <p>Background tematico -  avatar perfil</p>
                 <div class="portfolio-links">
                   <a href="https://login-registro.vercel.app/index.html?#" target="_blank">
@@ -368,7 +368,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/login/bg-alternative-color.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Tela de login #2</h4>
+                <h4>Tela de login - Bg Alternativo</h4>
                 <p>Background cores alternativa</p>
                 <div class="portfolio-links">
                   <a href="https://login-border-light-q79a.vercel.app/" target="_blank">
@@ -398,7 +398,7 @@
             <div class="portfolio-wrap">
               <img src="./assets/img/portfolio/login/login_3.jpg"  class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Tela de Login#4</h4>
+                <h4>Tela de Login - Transição Registro</h4>
                 <p>Transição para formulario de cadastro</p>
                 <div class="portfolio-links">
                   <a href="https://login-transicao-01.vercel.app/" target="_blank">
