--- a/index.html
+++ b/index.html
@@ -107,9 +107,6 @@
         <div class="section-title">
           <h2>Sobre mim</h2>
           <p class="text-start">
-            Focado no desenvolvimento Front-end, com especialização em React e Angular.
-            </br>
-            </br>
             Possuo habilidades sólidas em JavaScript, abrangendo programação orientada a objetos, async e promises, bem
             como Ajax. Tenho ampla experiência em frameworks como Angular e biblioteca como React.js, utilizando
             componentes reutilizáveis, Hooks, React Router, Apollo, GraphQl e Redux, Além disso, sou proficiente em
@@ -133,6 +130,9 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Desenvolvedor Front-end</h3>
             <p>
+              Focado no desenvolvimento Front-end em React e Angular.
+              </br>
+              </br>
               Apaixonado por tecnologia e entusiasmado em aprender e crescer como um profissional. Fortes habilidades em
               trabalho em equipe, participações em startups, refatoração de codigos.
 
